--- a/charles-github-ejb/pom.xml
+++ b/charles-github-ejb/pom.xml
@@ -22,6 +22,13 @@
 			<artifactId>jcabi-github</artifactId>
 			<version>0.28</version>
 		</dependency>
+		<dependency> <!-- system scope and jar as a resource until the first version is released -->
+            <groupId>com.amihaiemil.web</groupId>
+            <artifactId>charles</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/src/main/resources/charles-1.0.0-SNAPSHOT-jar-with-dependencies.jar</systemPath>
+        </dependency>
 		<dependency><!-- Email client -->
 			<groupId>com.jcabi</groupId>
 			<artifactId>jcabi-email</artifactId>
